8266086: [lworld][lw3] C1 produces incorrect code when GlobalValueNumbering is used

Reviewed-by: thartmann